<resources>
    <string name="app_name">Coin Moino</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="volume">Hacim</string>
    <string name="highest_price">En Yüksek Fiyat:</string>
    <string name="lowest_price">En Düşük Fiyat:</string>
    <string name="coin_time_15_minute">15d</string>
    <string name="coin_time_1_month">1A</string>
    <string name="coin_time_1_hour">1s</string>
    <string name="coin_time_4_hour">4s</string>
    <string name="coin_time_1_day">1g</string>
    <string name="coin_time_more">Daha Fazla</string>
    <string name="coin_time_1_minute">1d</string>
    <string name="coin_time_5_minute">5d</string>
    <string name="coin_time_30_minute">30d</string>
    <string name="coin_time_2_hour">2s</string>
    <string name="coin_time_8_hour">8s</string>
    <string name="coin_time_12_hour">12s</string>
    <string name="coin_time_1_week">1h</string>
    <string name="_24s_de_i_im">24s Değişim</string>
    <string name="fiyat">Fiyat</string>
    <string name="hacim">Hacim</string>
    <string name="ad">Ad</string>
    <string name="name">İsim</string>
    <string name="deger">Değer</string>
    <string name="populerlik">Popülerlik</string>
    <string name="search_currency_name">Döviz</string>
    <string name="coin_portfolio_price_str">%1$s %2$f</string>
    <string name="portfolyo">Portfolyo</string>
    <string name="alimlar">Alımlar</string>
    <string name="para_1">Para 1</string>
    <string name="para_2">Para 2</string>
    <string name="miktar">Miktar (%1$s)</string>
    <string name="toplam">Toplam (%1$s)</string>
    <string name="coin_exchange_value_text">$%1$s</string>
    <string name="coin_exchange_parcent_text">%1$s%2$s</string>
    <string name="quote_symbol">/%1$s</string>
    <string name="money_value">₺%1$s</string>
    <string name="volume_text">%1$s Hacim</string>
    <string name="kapat">Kapat</string>
    <string name="update_text_button">Güncelle</string>
    <string name="forced_update_message">Daha iyi deneyim için lütfen uygulamanızı güncelleyin</string>
    <string name="warning_title">Uyarı</string>
    <string name="your_process_is_success">İşleminiz Gerçekleşti</string>
    <string name="check_inputs">Girişleri kontrol et</string>
    <string name="coin_taked_value">%1$f -> %2$f</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="coin_profit">Kar %1$s (%2$s)</string>
    <string name="turkish">Türkçe</string>
    <string name="english">English</string>
    <string name="onayla">Onayla</string>
    <string name="language">Dil</string>
    <string name="about">Hakkında</string>
    <string name="fallow_us">Bizi Takip Edin</string>
    <string name="hacim_calculate">Hacim %1$s milyar</string>
    <string name="hacim_calculate2">Hacim %1$s milyon</string>
    <string name="hacim_calculate3">Hacim %1$s</string>
    <string name="hacim_calculate4">Hacim %1$s trilyon</string>
    <string name="usd">ABD DOLARI</string>
    <string name="aud">AVUSTRALYA DOLARI</string>
    <string name="dkk">DANİMARKA KRONU</string>
    <string name="eur">EURO</string>
    <string name="gbp">İNGİLİZ STERLİNİ</string>
    <string name="chf">İSVİÇRE FRANGI</string>
    <string name="sek">İSVEÇ KRONU</string>
    <string name="cad">KANADA DOLARI</string>
    <string name="kwd">KUVEYT DİNARI</string>
    <string name="nok">NORVEÇ KRONU</string>
    <string name="sar">SUUDİ ARABİSTAN RİYALİ</string>
    <string name="jpy">JAPON YENİ</string>
    <string name="bgn">BULGAR LEVASI</string>
    <string name="ron">RUMEN LEYİ</string>
    <string name="rub">RUS RUBLESİ</string>
    <string name="irr">İRAN RİYALİ</string>
    <string name="cny">ÇİN YUANI</string>
    <string name="pkr">PAKİSTAN RUPESİ</string>
    <string name="qar">KATAR RİYALİ</string>
    <string name="krw">GÜNEY KORE WONU</string>
    <string name="azn">AZERBAYCAN YENİ MANATI</string>
    <string name="aed">BİRLEŞİK ARAP EMİRLİKLERİ DİRHEMİ</string>
    <string name="tr">TÜRK LİRASI</string>
    <string name="delete">Sil</string>
    <string name="is_not_avaible_value">Güncel Veriye Erişilemedi</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="tema">Tema</string>
    <string name="thema_change_message">Tema değiştiriliyor</string>
    <string name="about_me">Biz Kimiz ? \nYazılım alanında kendini geliştiren 2 dost yazılımcı olarak gündemin en popüler sektörü olan finans alanındaki gelişmeleri yakından takip edebilecek ve tüm kitleye hitap edebilecek CoinMoino projesini hayata geçiriyoruz.
Biliyoruz ki ne kadar azim edersek o kadar başarıya yaklaşacağımızın farkındayız.
Gelecek bizi çok heyecanlandırıyor.\n
CoinMoino Fikir Babaları</string>
    <string name="currency_converter">Kur çevirici</string>
    <string name="buy_coin_text">Satın Al</string>
    <string name="volume_base_text">24s Hacim(%1$s)\n%2$s</string>
    <string name="volume_quote_text">24s Hacim(%1$s)\n%2$s</string>
    <string name="high_price_text">En Yüksek Fiyat\n%1$s</string>
    <string name="low_price_text">En Düşük Fiyat\n%1$s</string>
</resources>