<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/ayarlar">
        <menu>
            <item
                android:id="@+id/setting_menu"
                android:icon="@drawable/language"
                android:title="@string/language" />
        </menu>
    </item>

    <item
        android:id="@+id/about_menu"
        android:icon="@drawable/about"
        android:title="@string/about" />
    <item
        android:icon="@drawable/contact"
        android:title="@string/fallow_us">
        <menu>
            <item
                android:id="@+id/instagram_menu"
                android:title="Instagram"
                android:icon="@drawable/instagram_icon" />
            <item
                android:id="@+id/twitter_menu"
                android:title="Twitter"
                android:icon="@drawable/twitter_icon" />
            <item
                android:id="@+id/linkedin_menu"
                android:title="Linkedin"
                android:icon="@drawable/linkedin_icon" />
        </menu>
    </item>
</menu>