<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="230dp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="190dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/portfolio_detail_dialog"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/radioGroupLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/radioButtonTurkish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:text="@string/turkish" />

                    <RadioButton
                        android:id="@+id/radioButtonEnglish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl"
                        android:text="@string/english" />
                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonConfirmDialog"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/portfolio_closedialogbutton_background"
                android:backgroundTint="@color/primary_color"
                android:text="@string/onayla"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </RelativeLayout>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/portfolio_closedialogbutton_background"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_foreground"
            app:tint="@color/white" />

    </RelativeLayout>

</RelativeLayout>